User Management Completed in the admin Panel